# sigil-memory

./: .gitignore  FINDINGS.md  LICENSE  README.md  SKILL.md  core.py  pyproject.toml
activation/: __init__.py  pka.py
benchmarks/: bench_memory.py  run_benchmarks.py
compression/: __init__.py
examples/: quickstart.py  zo_hermes_setup.py
graph/: __init__.py  knowledge.py
intel/: brief-2026-04-24.md
memory/: embeddings.py  engine.py  schema.py
orchestration/: selfheal.py  swarm.py
scripts/: sigil_wrapper.py
sigil/: __init__.py  cli.py
sigil/bridge/: __init__.py  a2a.py
sigil/compression/: aaak.py
sigil/memory/: __init__.py  consolidation.py  entity_linking.py
sigil/orchestration/: __init__.py
sigil/persona/: soul.py
sigil/project/: __init__.py  manager.py
tests/: test_sigil.py
